--- a/src/DropdownGuestList.css
+++ b/src/DropdownGuestList.css
@@ -1,3 +1,8 @@
+ul, li, h3, p {
+    margin: 0;
+    padding: 0;
+}
+
 .partyPreview {
     padding: 5% 0;
 }
@@ -7,8 +12,17 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background-color: grey;
 }
 
 .guestSummary {
     display: flex;
+    justify-content: flex-start;
+    width: 70%;
+    background-color: whitesmoke;
+}
+
+.guestSummaryName {
+    margin-right: 5%;
+    flex-basis: 20%;
 }
