--- a/src/headerFooter.css
+++ b/src/headerFooter.css
@@ -11,6 +11,7 @@ html { box-sizing: border-box;}
 
  h1 {
     font-family: 'Judson';
+    color: #260755;
  }
 
  p{
@@ -28,7 +29,7 @@ html { box-sizing: border-box;}
     align-items: center;
     justify-content: center;
     text-align: center;
-    border: solid black;
+    border: solid #871A3E;
     border-radius: 15px;
     line-height: 18px;
  }
