--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,17 @@ p {
   font-family: 'Lato', sans-serif;
 }
 
-h1, p, label, input, button {
+/* put my part in a section */
+section, h1, p {
   margin: 0;
   padding: 0;
+}
+
+.wrapper {
+  max-width: 1260px;
+  width: 90%;
+  margin: 0 auto;
+  /* display: flex; */
 }
 
 .App {
