updated box shadow

--- a/src/App.css
+++ b/src/App.css
@@ -75,7 +75,7 @@
   margin-bottom: 20px;
   transition: transform 0.2s;
   /* box-shadow: 5px 10px #871a3e; */
-  box-shadow: 0 0 10px #302e2f;
+  box-shadow: 0 0 10px #948c90;
 }
 
 .individualRecipe:hover {
