--- a/src/DropdownGuestList.css
+++ b/src/DropdownGuestList.css
@@ -1,28 +1,130 @@
-ul, li, h3, p {
+@import url('https://fonts.googleapis.com/css?family=Lato:regular');
+@import url('https://fonts.googleapis.com/css?family=Judson:bold');
+
+html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
+
+html { box-sizing: border-box;}
+
+*, *::before, *::after {box-sizing: inherit}
+
+.sr-only { position: absolute; width: 1px; height: 1px; margin: -1px; border: 0; padding: 0; white-space: nowrap; clip-path: inset(100%); clip: rect(0 0 0 0); overflow: hidden;}
+
+/* General styles  */
+
+html {
+    font-size: 125%;
+}
+
+fieldset, ul, li, h2, h3, p, button {
     margin: 0;
     padding: 0;
 }
 
-.partyPreview {
-    padding: 5% 0;
+li {
+    list-style-type: none;
+    width: 100%;
 }
 
-.partySummary {
+fieldset, button {
+    border: none;
+}
+/* Font styles */
+
+h2, h3 {
+    font-family: 'Judson', sans-serif;
+    font-weight: bold;
+    text-transform: uppercase;
+}
+
+h2 {
+    font-size: 2rem;
+    color: #260755;
+    padding: 20px;
+}
+
+h3 {
+    font-size: 1.4rem;
+    color: #871A3E;
+    letter-spacing: 3px;
+}
+
+p, legend, label, button {
+    font-family: 'Lato', sans-serif;
+    font-size: 1rem;
+}
+
+.partySummary p:not(:last-child) {
+    border-bottom: grey 1px solid;
+}
+
+/* Party Preview Section (includes Dropdown.js component) */
+.partyPreview {
+    padding: 5% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* Dropdown component */
+.dropdown {
+    text-align: center;
+}
+
+label {
+    margin-right: 10px;
+}
+
+fieldset div {
+    padding: 20px 0;
+}
+
+.btn {
+    padding: 15px;
+    border-radius: 40px;
+    background-color: #871A3E;
+    color: white;
+    text-transform: uppercase;
+    transition: all .3s;
+}
+
+.btn:hover, 
+.btn:focus {
+    background-color: #260755;
+}
+
+
+/* Guest List component */
+.guestList {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: grey;
+    width: 100%;
 }
 
-.guestSummary {
+.partySummary {
     display: flex;
-    justify-content: flex-start;
-    width: 70%;
-    background-color: whitesmoke;
+    justify-content: center;
+    width: 85%;
+    background-color: #F5F5F5;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
 }
 
-.guestSummaryName {
-    margin-right: 5%;
-    flex-basis: 20%;
+.partySummary li:first-child {
+    padding-left: 20px;
+}
+
+.partySummary li:last-child {
+    padding-right: 20px;
+}
+
+.partySummary p {
+    color: grey;
+    text-transform: uppercase;
+    padding: 5px;
+}
+
+.guestRestrictions {
+    text-align: left;
 }
