forgot the :b:avender colour

--- a/src/headerFooter.css
+++ b/src/headerFooter.css
@@ -33,6 +33,7 @@ html { box-sizing: border-box;}
     border: solid #871A3E;
     border-radius: 15px;
     line-height: 18px;
+    background-color: #D3CFE6;
  }
 
  a {
