--- a/src/App.css
+++ b/src/App.css
@@ -44,7 +44,7 @@
 
 @import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 
-/* New information */
+/* IMAGE STYLING */
 
 .wrapper {
   width: 90%;
