--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,3 @@
-
-
-.App {
-  text-align: center;
-
 @import url('https://fonts.googleapis.com/css2?family=Judson:wght@700&family=Lato&display=swap%27');
 
 html{line-height:1.15;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%}body{margin:0}article,aside,footer,header,nav,section{display:block}h1{font-size:2em;margin:.67em 0}figcaption,figure,main{display:block}figure{margin:1em 40px}hr{box-sizing:content-box;height:0;overflow:visible}pre{font-family:monospace,monospace;font-size:1em}a{background-color:transparent;-webkit-text-decoration-skip:objects}abbr[title]{border-bottom:none;text-decoration:underline;text-decoration:underline dotted}b,strong{font-weight:inherit}b,strong{font-weight:bolder}code,kbd,samp{font-family:monospace,monospace;font-size:1em}dfn{font-style:italic}mark{background-color:#ff0;color:#000}small{font-size:80%}sub,sup{font-size:75%;line-height:0;position:relative;vertical-align:baseline}sub{bottom:-.25em}sup{top:-.5em}audio,video{display:inline-block}audio:not([controls]){display:none;height:0}img{border-style:none}svg:not(:root){overflow:hidden}button,input,optgroup,select,textarea{font-family:sans-serif;font-size:100%;line-height:1.15;margin:0}button,input{overflow:visible}button,select{text-transform:none}button,html [type=button],[type=reset],[type=submit]{-webkit-appearance:button}button::-moz-focus-inner,[type=button]::-moz-focus-inner,[type=reset]::-moz-focus-inner,[type=submit]::-moz-focus-inner{border-style:none;padding:0}button:-moz-focusring,[type=button]:-moz-focusring,[type=reset]:-moz-focusring,[type=submit]:-moz-focusring{outline:1px dotted ButtonText}fieldset{padding:.35em .75em .625em}legend{box-sizing:border-box;color:inherit;display:table;max-width:100%;padding:0;white-space:normal}progress{display:inline-block;vertical-align:baseline}textarea{overflow:auto}[type=checkbox],[type=radio]{box-sizing:border-box;padding:0}[type=number]::-webkit-inner-spin-button,[type=number]::-webkit-outer-spin-button{height:auto}[type=search]{-webkit-appearance:textfield;outline-offset:-2px}[type=search]::-webkit-search-cancel-button,[type=search]::-webkit-search-decoration{-webkit-appearance:none}::-webkit-file-upload-button{-webkit-appearance:button;font:inherit}details,menu{display:block}summary{display:list-item}canvas{display:inline-block}template{display:none}[hidden]{display:none}
@@ -19,32 +14,105 @@ html { box-sizing: border-box;}
 #871A3E - maroon-red
 */
 
+.App {
+  text-align: center;
+}
+
+/* General */
 html {
   font-size: 125%;
   line-height: 1.5rem;
   background-color: #D3CFE6;
 }
 
-h1 {
-  font-family: 'Judson', serif;
-}
-
-p {
-  font-family: 'Lato', sans-serif;
-
-}
-
-/* put my part in a section */
-section, h1, p {
-  margin: 0;
-  padding: 0;
-}
-
 .wrapper {
   max-width: 1260px;
   width: 90%;
   margin: 0 auto;
-  /* display: flex; */
+}
+
+section, fieldset, h1, h2, h3, p, ul, li, button {
+  margin: 0;
+  padding: 0;
+}
+
+li {
+  list-style-type: none;
+  width: 100%;
+}
+
+fieldset, button {
+  border: none;
+}
+
+/* Typography */
+h1 {
+  font-family: 'Judson', serif;
+  color: #260755;
+  margin: 50px 0;
+  letter-spacing: 1px;
+  font-size: 3rem;
+}
+
+h2, h3 {
+  font-family: 'Judson', serif;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 2rem;
+  color: #260755;
+  padding: 20px;
+}
+
+h3 {
+  font-size: 1.4rem;
+  color: #871A3E;
+  letter-spacing: 3px;
+}
+
+p, legend, label, button {
+  font-family: 'Lato', sans-serif;
+  color: #260755;
+  font-size: 1rem;
+}
+
+/* Header & Footer */
+header p{
+  max-width: 50%; 
+  margin-bottom: 25px;
+}
+
+header{
+  margin-top: 25px 0;
+}
+
+footer {
+  margin-top: 25px 0;
+  background-color: #260755;
+}
+
+footer p {
+  color: #D3CFE6;
+}
+
+.textContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border-radius: 15px;
+  border: solid #871A3E;
+}
+
+a {
+  font-family: "Lato", sans-serif;
+  text-decoration: none;
+  color: #D3CFE6;
+}
+
+a:hover, a:focus {
+  color: white;
+  /* transition: .3s; */
 }
 
 /* Party Form */
@@ -71,8 +139,6 @@ section, h1, p {
   text-align: left;
 }
 
-/* could add pointer to label */
-/* try putting input in label for js? */
 .guestForm .checkboxes label {
   border-right: 5px solid #260755;
   margin-right: 2%;
@@ -87,28 +153,83 @@ section, h1, p {
   margin-right: 5px;
 }
 
-.guestForm button {
-  margin: 10px;
-  padding: 15px;
-  background-color: #871A3E;
-  color: #D3CFE6;
-  border: none;
-  border-radius: 35px;
-  text-transform: uppercase;
-  cursor: pointer;
-}
-/* #D3CFE6 #260755 #871A3E  */
-
-@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
-
-/* IMAGE STYLING */
-
-.wrapper {
-  width: 90%;
-  margin: 0 auto;
-  max-width: 1260px;
+/* Party Preview Section (includes Dropdown.js & GuestList.js component) */
+.partyPreview {
+    padding: 5% 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
+/* Dropdown component */
+.dropdown {
+    text-align: center;
+}
+
+label {
+    margin-right: 10px;
+}
+
+fieldset div {
+    padding: 20px 0;
+}
+
+.btn {
+    padding: 15px;
+    border-radius: 40px;
+    background-color: #871A3E;
+    color: #D3CFE6;
+    text-transform: uppercase;
+    transition: all .3s;
+    cursor: pointer;
+}
+
+.btn:hover, 
+.btn:focus {
+    background-color: #260755;
+}
+
+/* Guest List component */
+.guestList {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+
+.partySummary {
+    display: flex;
+    justify-content: center;
+    width: 85%;
+    background-color: #F5F5F5;
+    text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+}
+
+.partySummary li:first-child {
+    padding-left: 20px;
+}
+
+.partySummary li:last-child {
+    padding-right: 20px;
+}
+
+.partySummary p {
+    color: grey;
+    text-transform: capitalize;
+    padding: 5px;
+}
+
+.partySummary p:not(:last-child) {
+  border-bottom: grey 1px solid;
+}
+
+.guestRestrictions {
+    text-align: left;
+}
+
+/* RECIPE IMAGE STYLING */
 .Recipe {
   background-color: #d3cfe6;
   padding: 50px 0;
@@ -135,7 +256,7 @@ section, h1, p {
   box-shadow: 0 0 10px #948c90;
 }
 
-.individualRecipe:hover {
+.individualRecipe:hover, .individualRecipe:focus-within {
   transform: scale(1.08);
 }
 .individualRecipe img {
@@ -145,12 +266,11 @@ section, h1, p {
 
 .individualRecipe a {
   color: #260755;
-  font-family: "Lato", sans-serif;
   font-size: 1.25rem;
   text-decoration: none;
 }
 
-.individualRecipe a:hover {
+.individualRecipe:hover p, .individualRecipe:focus-within p {
   color: #871a3e;
 }
 
