--- a/src/App.css
+++ b/src/App.css
@@ -80,7 +80,7 @@ p, legend, label, button {
 /* Header & Footer */
 header p{
   max-width: 50%; 
-  margin-bottom: 25px;
+  margin: 10px 0;
 }
 
 header{
@@ -137,12 +137,13 @@ a:hover, a:focus {
   display: flex;
   flex-wrap: wrap;
   text-align: left;
+  justify-content: space-between;
+  margin: 15px;
 }
 
 .guestForm .checkboxes label {
   border-right: 5px solid #260755;
-  margin-right: 2%;
-  width: 175px;
+  width: 200px;
   cursor: pointer;
 }
 
@@ -155,7 +156,7 @@ a:hover, a:focus {
 
 /* Party Preview Section (includes Dropdown.js & GuestList.js component) */
 .partyPreview {
-    padding: 5% 0;
+    padding: 25px 0;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -164,6 +165,7 @@ a:hover, a:focus {
 /* Dropdown component */
 .dropdown {
     text-align: center;
+    padding-bottom: 25px;
 }
 
 label {
@@ -182,6 +184,7 @@ fieldset div {
     text-transform: uppercase;
     transition: all .3s;
     cursor: pointer;
+    width: 222px;
 }
 
 .btn:hover, 
