--- a/src/App.css
+++ b/src/App.css
@@ -431,18 +431,19 @@ fieldset div {
     padding-bottom: 20px;
   }
   
-  .guestName{
-    width: 100%;
-    text-align: center;
-  }
-  
   .partySummary {
     flex-direction: column;
   }
-
+  
+  .guestName{
+    width: 100%;
+    text-align: center;
+    padding: 0 10px;
+  }
+  
   .guestRestrictions{
     text-align: center;
-    margin-top: 10px;
+    padding: 0 10px;
   }
 }
 
